(fix) wrong overflow

--- a/apps/block_scout_web/assets/css/components/_api.scss
+++ b/apps/block_scout_web/assets/css/components/_api.scss
@@ -184,7 +184,6 @@ $api-doc-list-item-view-more-color: $api-doc-list-item-title-color !default;
   border-bottom: 1px solid $base-border-color;
   margin-bottom: $card-vertical-padding;
   padding-bottom: $card-vertical-padding / 2;
-  overflow-x: auto;
 }
 
 .api-doc-parameters-list-title {
